--- a/src/sha/sections/04-testtypes.adoc
+++ b/src/sha/sections/04-testtypes.adoc
@@ -55,4 +55,4 @@ There may be multiple 'expansionTechnique' types defined. Here are the types def
 
 * "repeating" - Append the number of content bits specified in 'contentLength' to itself as many times as needed until a hex string of exactly 'fullLength' bits is acquired. In the example shown, the final large message would have the form "DE26DE26DE26...DE26".
 
-There are multiple ways hash functions can be implemented in an IUT. The most common are via a single Hash() call on the message or via a series of Init(), any number of Update(), Final() calls. As noted in <<LDT>>, the difference between these hashing techniques can have consequences in the cryptographic module. If both interfaces are offered and accessible for testing, the IUT *MUST* only utilize a single Update() call for the large message.
+There are multiple ways hash functions can be implemented in an IUT. The most common are via a single Hash() call on the message or via a series of Init(), any number of Update(), Final() calls. As noted in <<LDT>>, the difference between these hashing techniques can have consequences in the cryptographic module. When using the Large Data Test (LDT) option, the IUT *MUST* only utilize a *single* Update() or Hash() call to process the entirety of the large message.
