Case fixes for xof algo names
Updates the casing for the TUPLEHASH, PARALLELHASH, and CSHAKE algorithm names to what is required by the server, i.e., the algorithm names must be uppercase.

https://github.com/usnistgov/ACVP/issues/1345

--- a/src/xof/sections/03-supported.adoc
+++ b/src/xof/sections/03-supported.adoc
@@ -4,12 +4,12 @@
 
 The following XOFs may be advertised by this ACVP compliant crypto module:
 
-* cSHAKE-128
-* cSHAKE-256
-* parallelHash-128
-* parallelHash-256
-* tupleHash-128
-* tupleHash-256
+* CSHAKE-128
+* CSHAKE-256
+* PARALLELHASH-128
+* PARALLELHASH-256
+* TUPLEHASH-128
+* TUPLEHASH-256
 * KMAC-128
 * KMAC-256
 
