--- a/src/xof/sections/97-examples.adoc
+++ b/src/xof/sections/97-examples.adoc
@@ -3,7 +3,7 @@
 [[app-reg-ex]]
 == Example Capabilities JSON Objects
 
-The following is an example JSON object advertising support for cSHAKE-128.
+The following is an example JSON object advertising support for CSHAKE-128.
 
 [align=left,alt=,type=]
 [source, json]
@@ -64,13 +64,13 @@ The following is an example JSON object advertising support for KMAC-128.
 }
 ----
 
-The following is an example JSON object advertising support for ParallelHash-128.
+The following is an example JSON object advertising support for PARALLELHASH-128.
 
 [align=left,alt=,type=]
 [source, json]
 ----
 {
-  "algorithm": "ParallelHash-128",
+  "algorithm": "PARALLELHASH-128",
   "revision": "1.0",
   "xof": [true, false],
   "hexCustomization": false,
@@ -98,13 +98,13 @@ The following is an example JSON object advertising support for ParallelHash-128
 }
 ----
 
-The following is an example JSON object advertising support for TupleHash-128.
+The following is an example JSON object advertising support for TUPLEHASH-128.
 
 [align=left,alt=,type=]
 [source, json]
 ----
 {
-  "algorithm": "TupleHash-128",
+  "algorithm": "TUPLEHASH-128",
   "revision": "1.0",
   "xof": [true, false],
   "hexCustomization": false,
@@ -129,7 +129,7 @@ The following is an example JSON object advertising support for TupleHash-128.
 [[app-vs-ex]]
 == Example Test Vectors JSON Objects
 
-The following is an example JSON object for cSHAKE test vectors sent from the ACVP server to the crypto module.
+The following is an example JSON object for CSHAKE test vectors sent from the ACVP server to the crypto module.
 
 [align=left,alt=,type=]
 [source, json]
@@ -253,7 +253,7 @@ The following is an example JSON object for KMAC test vectors sent from the ACVP
 ]
 ----
 
-The following is an example JSON object for ParallelHash test vectors sent from the ACVP server to the crypto module.
+The following is an example JSON object for PARALLELHASH test vectors sent from the ACVP server to the crypto module.
 
 [align=left,alt=,type=]
 [source, json]
@@ -262,7 +262,7 @@ The following is an example JSON object for ParallelHash test vectors sent from 
 { "acvVersion": <acvp-version> },
 {
   "vsId": 0,
-  "algorithm": "ParallelHash-128",
+  "algorithm": "PARALLELHASH-128",
   "revision": "1.0",
   "testGroups": [
     {
@@ -309,7 +309,7 @@ The following is an example JSON object for ParallelHash test vectors sent from 
 ]
 ----
 
-The following is an example JSON object for TupleHash test vectors sent from the ACVP server to the crypto module.
+The following is an example JSON object for TUPLEHASH test vectors sent from the ACVP server to the crypto module.
 
 [align=left,alt=,type=]
 [source, json]
@@ -318,7 +318,7 @@ The following is an example JSON object for TupleHash test vectors sent from the
 { "acvVersion": <acvp-version> },
 {
   "vsId": 0,
-  "algorithm": "TupleHash-128",
+  "algorithm": "TUPLEHASH-128",
   "revision": "1.0",
   "testGroups": [
     {
@@ -371,7 +371,7 @@ The following is an example JSON object for TupleHash test vectors sent from the
 [[app-results-ex]]
 == Example Test Results JSON Objects
 
-The following is an example JSON object for cSHAKE test results sent from the crypto module to the ACVP server. The JSON objects for ParallelHash and TupleHash match this schema.
+The following is an example JSON object for CSHAKE test results sent from the crypto module to the ACVP server. The JSON objects for PARALLELHASH and TUPLEHASH match this schema.
 
 [align=left,alt=,type=]
 [source, json]
