--- a/src/rsa/sections/05-keygen-capabilities.adoc
+++ b/src/rsa/sections/05-keygen-capabilities.adoc
@@ -96,6 +96,7 @@ An example of this is the following
 }
 ----
 
+
 === Property Registration RSA keyGen FIPS186-5
 
 The RSA / keyGen / FIPS186-5 capabilities are advertised as JSON objects within the 'capabilities' property.
@@ -118,7 +119,7 @@ A registration for RSA / keyGen / FIPS186-5 *SHALL* use these properties
 | qMod8 | The result of the evaluation of the generated q prime, q % 8 | integer | 0, 1, 3, 5, 7
 |===
 
-NOTE: Support for modulo 15360 has been temporarily disabled while keys are generated for use, apologies for any inconvenience.
+NOTE: While 15360 is supported for modulo in 186-5, at this time, it's not supported in ACVP due to system contraints. We apologize for any inconvenience.
 
 NOTE: The properties 'pMod8' and 'qMod8' with a value of 0, means that no modulus check will be performed on the generated primes p and q.
 
