--- a/src/eddsa/sections/05-eddsa-siggen-capabilities.adoc
+++ b/src/eddsa/sections/05-eddsa-siggen-capabilities.adoc
@@ -38,6 +38,13 @@ The following is an example
     ],
     "pure": true,
     "preHash": true,
+    "contextLength":[
+        {
+            "min":0,
+            "max":255,
+            "increment":1
+        }
+    ],
     "curve": [
         "ED-25519",
         "ED-448"
