--- a/src/symmetric/sections/05-capabilities.adoc
+++ b/src/symmetric/sections/05-capabilities.adoc
@@ -130,7 +130,7 @@ The following grid outlines which properties are *REQUIRED*, as well as the poss
 | AES-GCM| "1.0"| ["encrypt", "decrypt"]| [128, 192, 256]| {"Min": 0, "Max": 65536, "Inc": any}| {"Min": 8, "Max": 1024, "Inc": any}| ["internal", "external"]| ["8.2.1", "8.2.2"]| | {"Min": 0, "Max": 65536, "Inc": any}| [32, 64, 96, 104, 112, 120, 128]
 | AES-GCM-SIV| "1.0"| ["encrypt", "decrypt"]| [128, 256]| {"Min": 0, "Max": 65536, "Inc": 8}| | | | | {"Min": 0, "Max": 65536, "Inc": 8}|
 | AES-XPN| "1.0"| ["encrypt", "decrypt"]| [128, 192, 256]| {"Min": 0, "Max": 65536, "Inc": any}| | ["internal", "external"]| ["8.2.1", "8.2.2"]| ["internal", "external"]| {"Min": 1, "Max": 65536, "Inc": any}| [32, 64, 96, 104, 112, 120, 128]
-| AES-CCM| "1.0"| ["encrypt", "decrypt"]| [128, 192, 256]| {"Min": 0, "Max": 256, "Inc": 8}| {"Min": 56, "Max": 104, "Inc": 8}| | | | {"Min": 0, "Max": 524288, "Inc": any}| [32, 48, 64, 80, 96, 112, 128]
+| AES-CCM| "1.0"| | [128, 192, 256]| {"Min": 0, "Max": 256, "Inc": 8}| {"Min": 56, "Max": 104, "Inc": 8}| | | | {"Min": 0, "Max": 524288, "Inc": any}| [32, 48, 64, 80, 96, 112, 128]
 |===
 
 NOTE: The ivGenMode property is used for AES-GCM/AES-XPN algorithms to document which IV construction method the implementation conforms to: the deterministic construction defined in SP 800-38D section 8.2.1 or the RBG-based construction defined in SP 800-38D section 8.2.2.
